--- a/a_href.html
+++ b/a_href.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
 <body>
+  <title> I am using git</title>
 
 <h2>The href Attribute</h2>
 <p>HTML links are defined with the a tag. The link address is specified in the href attribute:</p>
